// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Component does not render modal in case it is not visible 1`] = `
<body>
  <div />
</body>
`;

exports[`Modal Component renders fullscreen modal correctly (with empty header) 1`] = `
<body>
  <div />
  <div
    class="mia-platform-modal-root"
  >
    <div
      class="mia-platform-modal-mask"
    />
    <div
      class="mia-platform-modal-wrap mia-platform-modal-centered"
      tabindex="-1"
    >
      <div
        aria-labelledby="test-id"
        aria-modal="true"
        class="mia-platform-modal modal modalFs"
        role="dialog"
        style="width: 520px;"
      >
        <div
          style="outline: none;"
          tabindex="0"
        >
          <div
            class="mia-platform-modal-content"
          >
            <button
              aria-label="Close"
              class="mia-platform-modal-close"
              type="button"
            >
              <span
                class="mia-platform-modal-close-x"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close mia-platform-modal-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <div
              class="mia-platform-modal-header"
            >
              <div
                class="mia-platform-modal-title"
                id="test-id"
              >
                <div
                  class="title"
                />
              </div>
            </div>
            <div
              class="mia-platform-modal-body"
            >
              <div
                class="body"
              >
                <div
                  class="content"
                >
                  Modal Content
                </div>
              </div>
            </div>
            <div
              class="mia-platform-modal-footer"
            >
              <div
                class="footer"
              >
                <div
                  class="footerButtons"
                >
                  <button
                    class="mia-platform-btn mia-platform-btn-primary mia-platform-btn-color-primary mia-platform-btn-variant-solid button buttonMd"
                    type="button"
                  >
                    <div
                      class="buttonText"
                    >
                      OK
                    </div>
                  </button>
                  <button
                    class="mia-platform-btn mia-platform-btn-default mia-platform-btn-color-default mia-platform-btn-variant-outlined button buttonMd"
                    type="button"
                  >
                    <div
                      class="buttonText"
                    >
                      Cancel
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="width: 0px; height: 0px; overflow: hidden; outline: none;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal Component renders large modal correctly (with empty footer) 1`] = `
<body>
  <div />
  <div
    class="mia-platform-modal-root"
  >
    <div
      class="mia-platform-modal-mask"
    />
    <div
      class="mia-platform-modal-wrap mia-platform-modal-centered"
      tabindex="-1"
    >
      <div
        aria-labelledby="test-id"
        aria-modal="true"
        class="mia-platform-modal modal modalLg"
        role="dialog"
        style="width: 520px;"
      >
        <div
          style="outline: none;"
          tabindex="0"
        >
          <div
            class="mia-platform-modal-content"
          >
            <button
              aria-label="Close"
              class="mia-platform-modal-close"
              type="button"
            >
              <span
                class="mia-platform-modal-close-x"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close mia-platform-modal-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <div
              class="mia-platform-modal-header"
            >
              <div
                class="mia-platform-modal-title"
                id="test-id"
              >
                <div
                  class="title"
                >
                  <h4
                    aria-label="Modal Title"
                    class="mia-platform-typography mia-platform-typography-ellipsis mia-platform-typography-ellipsis-single-line h4"
                    role="h4"
                  >
                    Modal Title
                  </h4>
                  <div
                    class="docLink"
                  >
                    <button
                      class="mia-platform-btn mia-platform-btn-circle mia-platform-btn-primary mia-platform-btn-color-primary mia-platform-btn-variant-solid mia-platform-btn-icon-only mia-platform-btn-background-ghost button buttonMdIconOnly buttonGhost"
                      type="button"
                    >
                      <span
                        class="mia-platform-btn-icon"
                      >
                        <svg
                          aria-label="Doc Link"
                          color="#1261e4"
                          fill="currentColor"
                          height="16"
                          role="img"
                          stroke="currentColor"
                          stroke-width="0"
                          style="color: rgb(18, 97, 228);"
                          viewBox="0 0 256 256"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M232,48H160a40,40,0,0,0-32,16A40,40,0,0,0,96,48H24a8,8,0,0,0-8,8V200a8,8,0,0,0,8,8H96a24,24,0,0,1,24,24,8,8,0,0,0,16,0,24,24,0,0,1,24-24h72a8,8,0,0,0,8-8V56A8,8,0,0,0,232,48ZM96,192H32V64H96a24,24,0,0,1,24,24V200A39.81,39.81,0,0,0,96,192Zm128,0H160a39.81,39.81,0,0,0-24,8V88a24,24,0,0,1,24-24h64Z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mia-platform-modal-body"
            >
              <div
                class="body"
              >
                <div
                  class="content"
                >
                  Modal Content
                </div>
              </div>
            </div>
            <div
              class="mia-platform-modal-footer"
            >
              <div
                class="footer"
              />
            </div>
          </div>
        </div>
        <div
          style="width: 0px; height: 0px; overflow: hidden; outline: none;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal Component renders modal with aside fixed 1`] = `
<body>
  <div />
  <div
    class="mia-platform-modal-root"
  >
    <div
      class="mia-platform-modal-mask"
    />
    <div
      class="mia-platform-modal-wrap mia-platform-modal-centered"
      tabindex="-1"
    >
      <div
        aria-labelledby="test-id"
        aria-modal="true"
        class="mia-platform-modal modal modalLg"
        role="dialog"
        style="width: 520px;"
      >
        <div
          style="outline: none;"
          tabindex="0"
        >
          <div
            class="mia-platform-modal-content"
          >
            <button
              aria-label="Close"
              class="mia-platform-modal-close"
              type="button"
            >
              <span
                class="mia-platform-modal-close-x"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close mia-platform-modal-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <div
              class="mia-platform-modal-header"
            >
              <div
                class="mia-platform-modal-title"
                id="test-id"
              >
                <div
                  class="title"
                >
                  <h4
                    aria-label="Modal Title"
                    class="mia-platform-typography mia-platform-typography-ellipsis mia-platform-typography-ellipsis-single-line h4"
                    role="h4"
                  >
                    Modal Title
                  </h4>
                  <div
                    class="docLink"
                  >
                    <button
                      class="mia-platform-btn mia-platform-btn-circle mia-platform-btn-primary mia-platform-btn-color-primary mia-platform-btn-variant-solid mia-platform-btn-icon-only mia-platform-btn-background-ghost button buttonMdIconOnly buttonGhost"
                      type="button"
                    >
                      <span
                        class="mia-platform-btn-icon"
                      >
                        <svg
                          aria-label="Doc Link"
                          color="#1261e4"
                          fill="currentColor"
                          height="16"
                          role="img"
                          stroke="currentColor"
                          stroke-width="0"
                          style="color: rgb(18, 97, 228);"
                          viewBox="0 0 256 256"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M232,48H160a40,40,0,0,0-32,16A40,40,0,0,0,96,48H24a8,8,0,0,0-8,8V200a8,8,0,0,0,8,8H96a24,24,0,0,1,24,24,8,8,0,0,0,16,0,24,24,0,0,1,24-24h72a8,8,0,0,0,8-8V56A8,8,0,0,0,232,48ZM96,192H32V64H96a24,24,0,0,1,24,24V200A39.81,39.81,0,0,0,96,192Zm128,0H160a39.81,39.81,0,0,0-24,8V88a24,24,0,0,1,24-24h64Z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mia-platform-modal-body"
            >
              <div
                class="body bodyWithAsideOpened"
              >
                <div
                  class="content"
                >
                  Modal Content
                </div>
                <aside
                  class="asideWrapper"
                >
                  <div
                    class="aside"
                  >
                    <div
                      class="mia-platform-typography bodyM"
                      role="paragraph"
                    >
                      Modal Aside Title
                    </div>
                    <div
                      class="asideBody"
                    >
                      <div>
                        Modal Aside Content
                      </div>
                    </div>
                  </div>
                </aside>
              </div>
            </div>
            <div
              class="mia-platform-modal-footer"
            >
              <div
                class="footer"
              >
                <div
                  class="footerButtons"
                >
                  <button
                    class="mia-platform-btn mia-platform-btn-primary mia-platform-btn-color-primary mia-platform-btn-variant-solid button buttonMd"
                    type="button"
                  >
                    <div
                      class="buttonText"
                    >
                      OK
                    </div>
                  </button>
                  <button
                    class="mia-platform-btn mia-platform-btn-default mia-platform-btn-color-default mia-platform-btn-variant-outlined button buttonMd"
                    type="button"
                  >
                    <div
                      class="buttonText"
                    >
                      Cancel
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="width: 0px; height: 0px; overflow: hidden; outline: none;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal Component renders modal with aside openable 1`] = `
<body>
  <div />
  <div
    class="mia-platform-modal-root"
  >
    <div
      class="mia-platform-modal-mask"
    />
    <div
      class="mia-platform-modal-wrap mia-platform-modal-centered"
      tabindex="-1"
    >
      <div
        aria-labelledby="test-id"
        aria-modal="true"
        class="mia-platform-modal modal modalLg"
        role="dialog"
        style="width: 520px;"
      >
        <div
          style="outline: none;"
          tabindex="0"
        >
          <div
            class="mia-platform-modal-content"
          >
            <button
              aria-label="Close"
              class="mia-platform-modal-close"
              type="button"
            >
              <span
                class="mia-platform-modal-close-x"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close mia-platform-modal-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <div
              class="mia-platform-modal-header"
            >
              <div
                class="mia-platform-modal-title"
                id="test-id"
              >
                <div
                  class="title"
                >
                  <h4
                    aria-label="Modal Title"
                    class="mia-platform-typography mia-platform-typography-ellipsis mia-platform-typography-ellipsis-single-line h4"
                    role="h4"
                  >
                    Modal Title
                  </h4>
                  <div
                    class="docLink"
                  >
                    <button
                      class="mia-platform-btn mia-platform-btn-circle mia-platform-btn-primary mia-platform-btn-color-primary mia-platform-btn-variant-solid mia-platform-btn-icon-only mia-platform-btn-background-ghost button buttonMdIconOnly buttonGhost"
                      type="button"
                    >
                      <span
                        class="mia-platform-btn-icon"
                      >
                        <svg
                          aria-label="Doc Link"
                          color="#1261e4"
                          fill="currentColor"
                          height="16"
                          role="img"
                          stroke="currentColor"
                          stroke-width="0"
                          style="color: rgb(18, 97, 228);"
                          viewBox="0 0 256 256"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M232,48H160a40,40,0,0,0-32,16A40,40,0,0,0,96,48H24a8,8,0,0,0-8,8V200a8,8,0,0,0,8,8H96a24,24,0,0,1,24,24,8,8,0,0,0,16,0,24,24,0,0,1,24-24h72a8,8,0,0,0,8-8V56A8,8,0,0,0,232,48ZM96,192H32V64H96a24,24,0,0,1,24,24V200A39.81,39.81,0,0,0,96,192Zm128,0H160a39.81,39.81,0,0,0-24,8V88a24,24,0,0,1,24-24h64Z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mia-platform-modal-body"
            >
              <div
                class="body bodyWithAsideClosed"
              >
                <div
                  class="content contentWrapper"
                >
                  <div
                    class="content"
                  >
                    Modal Content
                  </div>
                  <div
                    class="asideLabelWrapper"
                  >
                    <div
                      class="asideLabel"
                    >
                      <svg
                        aria-label="Open aside"
                        color="currentColor"
                        fill="currentColor"
                        height="16"
                        role="img"
                        stroke="currentColor"
                        stroke-width="0"
                        style="color: currentColor;"
                        viewBox="0 0 256 256"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M165.66,202.34a8,8,0,0,1-11.32,11.32l-80-80a8,8,0,0,1,0-11.32l80-80a8,8,0,0,1,11.32,11.32L91.31,128Z"
                        />
                      </svg>
                      Open
                    </div>
                  </div>
                </div>
                <aside
                  class="asideWrapper"
                >
                  <div
                    class="aside"
                  >
                    <div
                      class="mia-platform-typography bodyM"
                      role="paragraph"
                    >
                      Modal Aside Title
                    </div>
                    <div
                      class="asideBody"
                    >
                      <div>
                        Modal Aside Content
                      </div>
                    </div>
                  </div>
                </aside>
              </div>
            </div>
            <div
              class="mia-platform-modal-footer"
            >
              <div
                class="footer"
              >
                <div
                  class="footerButtons"
                >
                  <button
                    class="mia-platform-btn mia-platform-btn-primary mia-platform-btn-color-primary mia-platform-btn-variant-solid button buttonMd"
                    type="button"
                  >
                    <div
                      class="buttonText"
                    >
                      OK
                    </div>
                  </button>
                  <button
                    class="mia-platform-btn mia-platform-btn-default mia-platform-btn-color-default mia-platform-btn-variant-outlined button buttonMd"
                    type="button"
                  >
                    <div
                      class="buttonText"
                    >
                      Cancel
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="width: 0px; height: 0px; overflow: hidden; outline: none;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal Component renders modal with aside openable 2`] = `
<body>
  <div />
  <div
    class="mia-platform-modal-root"
  >
    <div
      class="mia-platform-modal-mask"
    />
    <div
      class="mia-platform-modal-wrap mia-platform-modal-centered"
      tabindex="-1"
    >
      <div
        aria-labelledby="test-id"
        aria-modal="true"
        class="mia-platform-modal modal modalLg"
        role="dialog"
        style="width: 520px;"
      >
        <div
          style="outline: none;"
          tabindex="0"
        >
          <div
            class="mia-platform-modal-content"
          >
            <button
              aria-label="Close"
              class="mia-platform-modal-close"
              type="button"
            >
              <span
                class="mia-platform-modal-close-x"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close mia-platform-modal-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <div
              class="mia-platform-modal-header"
            >
              <div
                class="mia-platform-modal-title"
                id="test-id"
              >
                <div
                  class="title"
                >
                  <h4
                    aria-label="Modal Title"
                    class="mia-platform-typography mia-platform-typography-ellipsis mia-platform-typography-ellipsis-single-line h4"
                    role="h4"
                  >
                    Modal Title
                  </h4>
                  <div
                    class="docLink"
                  >
                    <button
                      class="mia-platform-btn mia-platform-btn-circle mia-platform-btn-primary mia-platform-btn-color-primary mia-platform-btn-variant-solid mia-platform-btn-icon-only mia-platform-btn-background-ghost button buttonMdIconOnly buttonGhost"
                      type="button"
                    >
                      <span
                        class="mia-platform-btn-icon"
                      >
                        <svg
                          aria-label="Doc Link"
                          color="#1261e4"
                          fill="currentColor"
                          height="16"
                          role="img"
                          stroke="currentColor"
                          stroke-width="0"
                          style="color: rgb(18, 97, 228);"
                          viewBox="0 0 256 256"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M232,48H160a40,40,0,0,0-32,16A40,40,0,0,0,96,48H24a8,8,0,0,0-8,8V200a8,8,0,0,0,8,8H96a24,24,0,0,1,24,24,8,8,0,0,0,16,0,24,24,0,0,1,24-24h72a8,8,0,0,0,8-8V56A8,8,0,0,0,232,48ZM96,192H32V64H96a24,24,0,0,1,24,24V200A39.81,39.81,0,0,0,96,192Zm128,0H160a39.81,39.81,0,0,0-24,8V88a24,24,0,0,1,24-24h64Z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mia-platform-modal-body"
            >
              <div
                class="body bodyWithAsideOpened"
              >
                <div
                  class="content contentWrapper"
                >
                  <div
                    class="content"
                  >
                    Modal Content
                  </div>
                  <div
                    class="asideLabelWrapper"
                  >
                    <div
                      class="asideLabel"
                    >
                      Close
                      <svg
                        aria-label="Close aside"
                        color="currentColor"
                        fill="currentColor"
                        height="16"
                        role="img"
                        stroke="currentColor"
                        stroke-width="0"
                        style="color: currentColor;"
                        viewBox="0 0 256 256"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <aside
                  class="asideWrapper"
                >
                  <div
                    class="aside"
                  >
                    <div
                      class="mia-platform-typography bodyM"
                      role="paragraph"
                    >
                      Modal Aside Title
                    </div>
                    <div
                      class="asideBody"
                    >
                      <div>
                        Modal Aside Content
                      </div>
                    </div>
                  </div>
                </aside>
              </div>
            </div>
            <div
              class="mia-platform-modal-footer"
            >
              <div
                class="footer"
              >
                <div
                  class="footerButtons"
                >
                  <button
                    class="mia-platform-btn mia-platform-btn-primary mia-platform-btn-color-primary mia-platform-btn-variant-solid button buttonMd"
                    type="button"
                  >
                    <div
                      class="buttonText"
                    >
                      OK
                    </div>
                  </button>
                  <button
                    class="mia-platform-btn mia-platform-btn-default mia-platform-btn-color-default mia-platform-btn-variant-outlined button buttonMd"
                    type="button"
                  >
                    <div
                      class="buttonText"
                    >
                      Cancel
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="width: 0px; height: 0px; overflow: hidden; outline: none;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal Component renders modal with body full width 1`] = `
<body>
  <div />
  <div
    class="mia-platform-modal-root"
  >
    <div
      class="mia-platform-modal-mask"
    />
    <div
      class="mia-platform-modal-wrap mia-platform-modal-centered"
      tabindex="-1"
    >
      <div
        aria-labelledby="test-id"
        aria-modal="true"
        class="mia-platform-modal modal modalSm"
        role="dialog"
        style="width: 520px;"
      >
        <div
          style="outline: none;"
          tabindex="0"
        >
          <div
            class="mia-platform-modal-content"
          >
            <button
              aria-label="Close"
              class="mia-platform-modal-close"
              type="button"
            >
              <span
                class="mia-platform-modal-close-x"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close mia-platform-modal-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <div
              class="mia-platform-modal-header"
            >
              <div
                class="mia-platform-modal-title"
                id="test-id"
              >
                <div
                  class="title"
                />
              </div>
            </div>
            <div
              class="mia-platform-modal-body"
            >
              <div
                class="body bodyFullWidth"
              >
                <div
                  class="content"
                />
              </div>
            </div>
            <div
              class="mia-platform-modal-footer"
            >
              <div
                class="footer"
              />
            </div>
          </div>
        </div>
        <div
          style="width: 0px; height: 0px; overflow: hidden; outline: none;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal Component renders modal with custom footer 1`] = `
<body>
  <div />
  <div
    class="mia-platform-modal-root"
  >
    <div
      class="mia-platform-modal-mask"
    />
    <div
      class="mia-platform-modal-wrap mia-platform-modal-centered"
      tabindex="-1"
    >
      <div
        aria-labelledby="test-id"
        aria-modal="true"
        class="mia-platform-modal modal modalSm"
        role="dialog"
        style="width: 520px;"
      >
        <div
          style="outline: none;"
          tabindex="0"
        >
          <div
            class="mia-platform-modal-content"
          >
            <button
              aria-label="Close"
              class="mia-platform-modal-close"
              type="button"
            >
              <span
                class="mia-platform-modal-close-x"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close mia-platform-modal-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <div
              class="mia-platform-modal-header"
            >
              <div
                class="mia-platform-modal-title"
                id="test-id"
              >
                <div
                  class="title"
                >
                  <h4
                    aria-label="Modal Title"
                    class="mia-platform-typography mia-platform-typography-ellipsis mia-platform-typography-ellipsis-single-line h4"
                    role="h4"
                  >
                    Modal Title
                  </h4>
                  <div
                    class="docLink"
                  >
                    <button
                      class="mia-platform-btn mia-platform-btn-circle mia-platform-btn-primary mia-platform-btn-color-primary mia-platform-btn-variant-solid mia-platform-btn-icon-only mia-platform-btn-background-ghost button buttonMdIconOnly buttonGhost"
                      type="button"
                    >
                      <span
                        class="mia-platform-btn-icon"
                      >
                        <svg
                          aria-label="Doc Link"
                          color="#1261e4"
                          fill="currentColor"
                          height="16"
                          role="img"
                          stroke="currentColor"
                          stroke-width="0"
                          style="color: rgb(18, 97, 228);"
                          viewBox="0 0 256 256"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M232,48H160a40,40,0,0,0-32,16A40,40,0,0,0,96,48H24a8,8,0,0,0-8,8V200a8,8,0,0,0,8,8H96a24,24,0,0,1,24,24,8,8,0,0,0,16,0,24,24,0,0,1,24-24h72a8,8,0,0,0,8-8V56A8,8,0,0,0,232,48ZM96,192H32V64H96a24,24,0,0,1,24,24V200A39.81,39.81,0,0,0,96,192Zm128,0H160a39.81,39.81,0,0,0-24,8V88a24,24,0,0,1,24-24h64Z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mia-platform-modal-body"
            >
              <div
                class="body"
              >
                <div
                  class="content"
                >
                  Modal Content
                </div>
              </div>
            </div>
            <div
              class="mia-platform-modal-footer"
            >
              <div
                class="footer"
              >
                <div
                  class="footerButtons"
                >
                  <button
                    class="mia-platform-btn mia-platform-btn-primary mia-platform-btn-color-primary mia-platform-btn-variant-solid button buttonMd"
                    type="button"
                  >
                    <div
                      class="buttonText"
                    >
                      Button 1
                    </div>
                  </button>
                  <button
                    class="mia-platform-btn mia-platform-btn-default mia-platform-btn-color-default mia-platform-btn-variant-outlined button buttonMd"
                    type="button"
                  >
                    <div
                      class="buttonText"
                    >
                      Button 2
                    </div>
                  </button>
                  <button
                    class="mia-platform-btn mia-platform-btn-default mia-platform-btn-color-default mia-platform-btn-variant-outlined button buttonMd"
                    type="button"
                  >
                    <div
                      class="buttonText"
                    >
                      Button 3
                    </div>
                  </button>
                  <button
                    class="mia-platform-btn mia-platform-btn-default mia-platform-btn-color-default mia-platform-btn-variant-outlined button buttonMd"
                    type="button"
                  >
                    <div
                      class="buttonText"
                    >
                      Button 4
                    </div>
                  </button>
                </div>
                Footer Extra
              </div>
            </div>
          </div>
        </div>
        <div
          style="width: 0px; height: 0px; overflow: hidden; outline: none;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal Component renders not closable modal 1`] = `
<body>
  <div />
  <div
    class="mia-platform-modal-root"
  >
    <div
      class="mia-platform-modal-mask"
    />
    <div
      class="mia-platform-modal-wrap mia-platform-modal-centered"
      tabindex="-1"
    >
      <div
        aria-labelledby="test-id"
        aria-modal="true"
        class="mia-platform-modal modal modalSm"
        role="dialog"
        style="width: 520px;"
      >
        <div
          style="outline: none;"
          tabindex="0"
        >
          <div
            class="mia-platform-modal-content"
          >
            <div
              class="mia-platform-modal-header"
            >
              <div
                class="mia-platform-modal-title"
                id="test-id"
              >
                <div
                  class="title"
                />
              </div>
            </div>
            <div
              class="mia-platform-modal-body"
            >
              <div
                class="body"
              >
                <div
                  class="content"
                />
              </div>
            </div>
            <div
              class="mia-platform-modal-footer"
            >
              <div
                class="footer"
              />
            </div>
          </div>
        </div>
        <div
          style="width: 0px; height: 0px; overflow: hidden; outline: none;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal Component renders small modal correctly (with children, docLink, footer and title) 1`] = `
<body>
  <div />
  <div
    class="mia-platform-modal-root"
  >
    <div
      class="mia-platform-modal-mask"
    />
    <div
      class="mia-platform-modal-wrap mia-platform-modal-centered"
      tabindex="-1"
    >
      <div
        aria-labelledby="test-id"
        aria-modal="true"
        class="mia-platform-modal modal modalSm"
        role="dialog"
        style="width: 520px;"
      >
        <div
          style="outline: none;"
          tabindex="0"
        >
          <div
            class="mia-platform-modal-content"
          >
            <button
              aria-label="Close"
              class="mia-platform-modal-close"
              type="button"
            >
              <span
                class="mia-platform-modal-close-x"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close mia-platform-modal-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <div
              class="mia-platform-modal-header"
            >
              <div
                class="mia-platform-modal-title"
                id="test-id"
              >
                <div
                  class="title"
                >
                  <h4
                    aria-label="Modal Title"
                    class="mia-platform-typography mia-platform-typography-ellipsis mia-platform-typography-ellipsis-single-line h4"
                    role="h4"
                  >
                    Modal Title
                  </h4>
                  <div
                    class="docLink"
                  >
                    <button
                      class="mia-platform-btn mia-platform-btn-circle mia-platform-btn-primary mia-platform-btn-color-primary mia-platform-btn-variant-solid mia-platform-btn-icon-only mia-platform-btn-background-ghost button buttonMdIconOnly buttonGhost"
                      type="button"
                    >
                      <span
                        class="mia-platform-btn-icon"
                      >
                        <svg
                          aria-label="Doc Link"
                          color="#1261e4"
                          fill="currentColor"
                          height="16"
                          role="img"
                          stroke="currentColor"
                          stroke-width="0"
                          style="color: rgb(18, 97, 228);"
                          viewBox="0 0 256 256"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M232,48H160a40,40,0,0,0-32,16A40,40,0,0,0,96,48H24a8,8,0,0,0-8,8V200a8,8,0,0,0,8,8H96a24,24,0,0,1,24,24,8,8,0,0,0,16,0,24,24,0,0,1,24-24h72a8,8,0,0,0,8-8V56A8,8,0,0,0,232,48ZM96,192H32V64H96a24,24,0,0,1,24,24V200A39.81,39.81,0,0,0,96,192Zm128,0H160a39.81,39.81,0,0,0-24,8V88a24,24,0,0,1,24-24h64Z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mia-platform-modal-body"
            >
              <div
                class="body"
              >
                <div
                  class="content"
                >
                  Modal Content
                </div>
              </div>
            </div>
            <div
              class="mia-platform-modal-footer"
            >
              <div
                class="footer"
              >
                <div
                  class="footerButtons"
                >
                  <button
                    class="mia-platform-btn mia-platform-btn-primary mia-platform-btn-color-primary mia-platform-btn-variant-solid button buttonMd"
                    type="button"
                  >
                    <div
                      class="buttonText"
                    >
                      OK
                    </div>
                  </button>
                  <button
                    class="mia-platform-btn mia-platform-btn-default mia-platform-btn-color-default mia-platform-btn-variant-outlined button buttonMd"
                    type="button"
                  >
                    <div
                      class="buttonText"
                    >
                      Cancel
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="width: 0px; height: 0px; overflow: hidden; outline: none;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</body>
`;
